# microdiff-matdesign

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION4_BREAKTHROUGH_REPORT.md  GENERATION5_BREAKTHROUGH_REPORT.md  Makefile  PROJECT_CHARTER.md  QUANTUM_PLANNER_README.md  README.md  SDLC_COMPLETION_REPORT.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  deployment_guide.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  quality_gates.py  quality_gates_comprehensive.py  quality_gates_report_20250825_114633.json  quality_report.json  quantum_breakthrough_implementation.py  quantum_breakthrough_results.json  requirements.txt  requirements_quantum.txt  robust_quantum_breakthrough.json  robust_quantum_materials.py  (+45 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: project-metrics.json
.terragon/: config.yaml  value-metrics.json
config/monitoring/: alertmanager.yml  grafana-dashboard.json  otel-collector.yaml  prometheus.yml  slo-config.yaml
config/monitoring/rules/: advanced-alerting.yml  microdiff_rules.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  RESEARCH_FRAMEWORK.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 001-diffusion-models.md  002-package-structure.md  003-gpu-acceleration.md  README.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md  alerts.yaml  health-checks.py  logging-config.yaml  prometheus-config.yml
docs/runbooks/: README.md  service-down.md
docs/testing/: README.md
docs/workflows/: README.md
docs/workflows/examples/: advanced-security-scan.yml  cd.yml  ci.yml  dependency-update.yml  progressive-deployment.yml  security-scan.yml  slsa-provenance.yml
microdiff_matdesign/: __init__.py  cli.py  core.py  imaging.py  monitoring.py
microdiff_matdesign/autonomous/: __init__.py  adaptive_learning_system.py  cognitive_architecture.py  self_evolving_ai.py
microdiff_matdesign/database/: __init__.py  connection.py  models.py  repositories.py
microdiff_matdesign/evolution/: __init__.py  autonomous_discovery_engine.py  meta_learning_optimizer.py  quantum_evolutionary_optimizer.py
microdiff_matdesign/models/: __init__.py  adaptive_intelligence.py  bayesian_uncertainty.py  conditioning.py  consciousness_aware.py  decoders.py  diffusion.py  encoders.py  hierarchical_multiscale.py  physics_informed.py  quantum_consciousness_bridge.py  quantum_enhanced.py
microdiff_matdesign/performance/: __init__.py  optimization.py
microdiff_matdesign/research/: __init__.py  autonomous_research_director.py  benchmarking.py  publication.py  reproducibility.py
microdiff_matdesign/security/: __init__.py  adversarial_defense.py
microdiff_matdesign/services/: __init__.py  analysis.py  optimization.py  parameter_generation.py  prediction.py
microdiff_matdesign/utils/: __init__.py  caching.py  compliance.py  error_handling.py  helpers.py  internationalization.py  logging_config.py  monitoring.py  performance.py  preprocessing.py  robust_validation.py  scaling.py  security.py  validation.py
quantum_planner/: __init__.py  main.py
quantum_planner/algorithms/: __init__.py  quantum_annealing.py  superposition.py
quantum_planner/core/: __init__.py  quantum_engine.py  scheduler.py  simple_scheduler.py  task.py
quantum_planner/utils/: __init__.py  error_handling.py  logging_config.py  performance.py  scaling.py  validation.py  visualization.py
scripts/: collect-metrics.py
scripts/automation/: README.md  advanced-metrics-collector.py  code-quality-monitor.py  dependency-updates.sh  repo-health-monitor.py  repository-maintenance.py
tests/: __init__.py  conftest.py  contract_tests.py  performance_config.py  test_core.py  test_imaging.py
tests/e2e/: test_cli.py
tests/fixtures/: README.md
tests/integration/: test_full_pipeline.py  test_pipeline.py
tests/unit/: test_core.py  test_database.py  test_optimization.py
