[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "microdiff-matdesign"
dynamic = ["version"]
description = "Diffusion model framework for inverse material design"
authors = [{name = "Daniel Schmidt", email = "daniel@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "pillow>=8.3.0",
    "numba>=0.56.0",
    "h5py>=3.6.0",
    "xarray>=0.19.0",
    "dask>=2021.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["torch[cuda]", "cupy"]
full = ["jupyter", "matplotlib", "plotly", "tqdm"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[project.scripts]
microdiff = "microdiff_matdesign.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/microdiff-matdesign"
Repository = "https://github.com/yourusername/microdiff-matdesign"
Issues = "https://github.com/yourusername/microdiff-matdesign/issues"

[tool.setuptools_scm]
write_to = "microdiff_matdesign/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=microdiff_matdesign",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["microdiff_matdesign"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]